[package]
name = "wams"
version = "0.1.0"
authors = ["Oegly"]
edition = "2018"

[[bin]]
name = "wamsbin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
name = "wamslib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
piston = "0.36.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.45.0"
piston2d-opengl_graphics = "0.52.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.36"
wasm-bindgen = "0.2.59"
console_error_panic_hook = "0.1.6"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.36"
features = [
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
]
